Updated site title and removed reference to unused file scripts.js

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,8 +10,7 @@
     <script src="/Scripts/handlebars.js"></script>
 
     <link rel="stylesheet" type="text/css" href="site.css" />
-    <script type="text/javascript" src="scripts.js"></script>
-    <title>Circles</title>
+    <title>BlackTooth</title>
     
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
